# safflower

./: .gitignore  Cargo.toml  changelog.md  readme.md  strings.txt
safflower-core/: Cargo.toml  license.md  readme.md
safflower-core/src/: error.rs  generator.rs  lib.rs  name.rs  parser.rs  reader.rs
safflower-core/src/generator/: tests.rs
safflower-core/src/name/: tests.rs
safflower-core/src/parser/: config.rs  error.rs  tests.rs
safflower-core/src/reader/: error.rs  tests.rs
safflower-macro/: Cargo.toml  readme.md
safflower-macro/src/: lib.rs  load.rs  text.rs
src/: integration_tests.rs  lib.rs  tests.rs
test-data/: abs_min.txt  float_format.txt  greet_en_se.txt  greet_name_en_it.txt  separate_entries.txt  separate_files.txt  separate_files_wl.txt  tight_two.txt
test-data/separation/: file_a.txt  file_a_wl.txt  file_b.txt  file_b_wl.txt
