[package]
name = "safflower"
version = "0.2.0"
edition = "2024"
authors = ["nscathic"]
license-file = "license.md"
description = "A localising tool with macros to statically allocate formattable text."
repository = "https://github.com/nscathic/safflower"
readme = "readme.md"
keywords = ["localisation", "localization", "language", "formatting"]
categories = ["internationalization", "localization"]

[dependencies]
safflower-core  = "0.2.0"
safflower-macro = "0.2.0"

[workspace]
members = ["safflower-core", "safflower-macro"]

[lints.clippy]
nursery  = { priority = -1, level = "deny" }
pedantic = { priority = -1, level = "deny" }

[dev-dependencies]
quote = "1.0.42"

