[package]
name = "safflower"
version = "0.3.0"
edition = "2024"
authors = ["nscathic"]
license = "MIT"
description = "A localising tool with macros to statically allocate formattable text."
repository = "https://github.com/nscathic/safflower"
readme = "readme.md"
keywords = ["localisation", "localization", "language", "formatting"]
categories = ["internationalization", "localization"]
exclude = ["src/bin"]

[dependencies]
safflower-core  = "0.3.0"
# safflower-core  = {path = "./safflower-core"}
safflower-macro = "0.3.0"
# safflower-macro = {path = "./safflower-macro"}

[workspace]
members = ["safflower-core", "safflower-macro"]

[lints.clippy]
nursery  = { priority = -1, level = "deny" }
pedantic = { priority = -1, level = "deny" }

[dev-dependencies]
quote = "1.0.42"
