[package]
name = "safflower-core"
version = "0.1.0"
edition = "2024"

[dependencies]
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = "2.0.111"
thiserror = "2.0.17"

[lints.clippy]
nursery  = { priority = -1, level = "deny" }
pedantic = { priority = -1, level = "deny" }

[dev-dependencies]
colored-diff = "0.2.3"