[package]
name = "safflower-core"
version = "0.2.1"
edition = "2024"
authors = ["nscathic"]
license = "MIT"
description = "A localising tool with macros to statically allocate formattable text."
repository = "https://github.com/nscathic/safflower"
readme = "readme.md"
keywords = ["localisation", "localization", "language", "formatting"]
categories = ["internationalization", "localization"]

[dependencies]
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = "2.0.111"
thiserror = "2.0.17"

[lints.clippy]
nursery  = { priority = -1, level = "deny" }
pedantic = { priority = -1, level = "deny" }

[dev-dependencies]
colored-diff = "0.2.3"