[package]
name = "safflower-macro"
version = "0.2.0"
edition = "2024"
authors = ["nscathic"]
license-file = "license.md"
description = "A localising tool with macros to statically allocate formattable text."
repository = "https://github.com/nscathic/safflower"
readme = "readme.md"
keywords = ["localisation", "localization", "language", "formatting"]
categories = ["internationalization", "localization"]

[dependencies]
proc-macro2 = "1.0.103"
quote = "1.0.42"
safflower-core = { version="0.2.0", path = "../safflower-core" }
syn = "2.0.111"

[lib]
proc-macro = true

[lints.clippy]
nursery  = { priority = -1, level = "deny" }
pedantic = { priority = -1, level = "deny" }
