[package]
name = "safflower-macro"
version = "0.4.1"
edition = "2024"
authors = ["nscathic"]
license = "MIT"
description = "A localising tool with macros to statically allocate formattable text."
repository = "https://github.com/nscathic/safflower"
readme = "readme.md"
keywords = ["localisation", "localization", "language", "formatting"]
categories = ["internationalization", "localization"]

[dependencies]
# safflower-core  = {path = "../safflower-core"}
safflower-core = "0.4.1"
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = "2.0.111"

[lib]
proc-macro = true

[lints.clippy]
nursery  = { priority = -1, level = "deny" }
pedantic = { priority = -1, level = "deny" }
